--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,20 +1,28 @@
+# Use official Python runtime as a parent image
+FROM python:3.10-slim
 
-FROM python:3.11-slim
-
+# Set working directory
 WORKDIR /app
 
-# Install system dependencies (build-essential/gcc needed for some python packages)
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential \
+# Set environment variables
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+
+# Install system dependencies (needed for some python packages or client libs)
+RUN apt-get update && apt-get install -y \
+    gcc \
+    libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
+# Install Python dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy application code
 COPY . .
 
-# Expose port (Render sets PORT env)
-ENV PORT=8000
+# Expose port
+EXPOSE 8000
 
 # Command to run the application
-CMD gunicorn app.main:app -k uvicorn.workers.UvicornWorker --bind 0.0.0.0:${PORT}
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
